--- a/src/main/resources/org/easytours/tourplanner/view/view.fxml
+++ b/src/main/resources/org/easytours/tourplanner/view/view.fxml
@@ -4,9 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.skin.TableHeaderRow?>
-<?import javafx.collections.FXCollections?>
-<GridPane hgap="4.0" vgap="4.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.2" fx:controller="org.easytours.tourplanner.Controller">
+<GridPane gridLinesVisible="true" hgap="4.0" vgap="4.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.2" fx:controller="org.easytours.tourplanner.controller.MainWindowController">
 
     <columnConstraints>
         <ColumnConstraints hgrow="NEVER" />
@@ -20,20 +18,23 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
-    <Button onAction="#onHelloButtonClick" text="File" GridPane.columnIndex="0" maxWidth="Infinity"/>
-    <Button onAction="#onHelloButtonClick" text="Edit" GridPane.columnIndex="1" maxWidth="Infinity" />
-    <Button onAction="#onHelloButtonClick" text="Options" GridPane.columnIndex="2" maxWidth="Infinity"/>
+    <Button onAction="#onHelloButtonClick" text="%Menu_File" GridPane.columnIndex="0" maxWidth="Infinity"/>
+    <Button onAction="#onHelloButtonClick" text="%Menu_Edit" GridPane.columnIndex="1" maxWidth="Infinity" />
+    <Button onAction="#onHelloButtonClick" text="%Menu_Options" GridPane.columnIndex="2" maxWidth="Infinity"/>
     <Button onAction="#onHelloButtonClick" text=" " GridPane.columnIndex="3" maxWidth="Infinity" />
-    <Button onAction="#onHelloButtonClick" text="Help" GridPane.columnIndex="4" maxWidth="Infinity" />
-    <TextField promptText="Search"  fx:id="searchTextField" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="1" />
+    <Button onAction="#onHelloButtonClick" text="%Menu_Help" GridPane.columnIndex="4" maxWidth="Infinity" />
+    <fx:include fx:id="searchBar" source="searchbar.fxml" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="5" maxWidth="Infinity"/>
+    <!--<TextField promptText="Search"  fx:id="searchTextField" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="1" />
     <Button onAction="#onSearchButtonClick" text="Lupe" GridPane.columnIndex="4" GridPane.rowIndex="1" maxWidth="Infinity"/>
+    -->
 
     <VBox style="-fx-border-width: 1; -fx-border-color: grey" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
         <padding>
             <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
         </padding>
+
         <HBox>
-            <Label text="Tours" />
+            <Label text="%TourOverview_Tours" />
             <Button alignment="CENTER_RIGHT" text="+" />
             <Button alignment="CENTER_RIGHT" text="-" />
             <Button alignment="CENTER_RIGHT" text="[]" />
@@ -47,10 +48,10 @@
         <padding>
             <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
         </padding>
-        <Label text="Title:" />
+        <Label text="%TourDetails_Title" />
         <FlowPane>
-            <ToggleButton text="Route" />
-            <ToggleButton text="Description" />
+            <ToggleButton text="%TourDetails_Route" />
+            <ToggleButton text="%TourDetails_Description" />
         </FlowPane>
         <TextArea/>
     </VBox>
@@ -65,17 +66,17 @@
                 <ColumnConstraints hgrow="NEVER" />
                 <ColumnConstraints hgrow="NEVER" />
             </columnConstraints>
-            <Label text="Logs:" GridPane.columnIndex="0" />
+            <Label text="%TourDetails_Logs" GridPane.columnIndex="0" />
             <Button text="+" GridPane.columnIndex="1"/>
             <Button text="-" GridPane.columnIndex="2"/>
             <Button text="[]" GridPane.columnIndex="3"/>
         </GridPane>
         <TableView>
             <columns>
-                <TableColumn text="Date"/>
-                <TableColumn text="Duration"/>
-                <TableColumn text="Distance"/>
-                <TableColumn text="..."/>
+                <TableColumn text="%TourDetails_Date"/>
+                <TableColumn text="%TourDetails_Duration"/>
+                <TableColumn text="%TourDetails_Distance"/>
+                <TableColumn text="%TourDetails_ppp"/>
             </columns>
         </TableView>
     </VBox>
