--- a/src/main/resources/org/easytours/tourplanner/view/tourdetails.fxml
+++ b/src/main/resources/org/easytours/tourplanner/view/tourdetails.fxml
@@ -6,9 +6,44 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.easytours.tourplanner.controller.TourDetailsController"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<?import javafx.geometry.Insets?>
+<VBox spacing="4.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="2">
+    <!--<VBox  GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="2">-->
+    <VBox styleClass="vbox-vbox">
+        <padding>
+            <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+        </padding>
+        <Label text="%TourDetails_Title" />
+        <FlowPane>
+            <ToggleButton text="%TourDetails_Route" />
+            <ToggleButton text="%TourDetails_Description" />
+        </FlowPane>
+        <TextArea/>
+    </VBox>
+    <!--<VBox GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3">-->
+    <VBox styleClass="vbox-vbox">
+        <padding>
+            <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+        </padding>
+        <GridPane>
+            <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" />
+                <ColumnConstraints hgrow="NEVER" />
+                <ColumnConstraints hgrow="NEVER" />
+                <ColumnConstraints hgrow="NEVER" />
+            </columnConstraints>
+            <Label text="%TourDetails_Logs" GridPane.columnIndex="0" />
+            <Button text="+" GridPane.columnIndex="1"/>
+            <Button text="-" GridPane.columnIndex="2"/>
+            <Button text="[]" GridPane.columnIndex="3"/>
+        </GridPane>
+        <TableView>
+            <columns>
+                <TableColumn text="%TourDetails_Date"/>
+                <TableColumn text="%TourDetails_Duration"/>
+                <TableColumn text="%TourDetails_Distance"/>
+                <TableColumn text="%TourDetails_ppp"/>
+            </columns>
+        </TableView>
+    </VBox>
+</VBox>
