--- a/src/main/resources/org/easytours/tourplanner/view/touroverview.fxml
+++ b/src/main/resources/org/easytours/tourplanner/view/touroverview.fxml
@@ -6,9 +6,20 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.easytours.tourplanner.controller.TourOverviewController"
-            prefHeight="400.0" prefWidth="600.0">
+<?import javafx.geometry.Insets?>
+<VBox styleClass="vbox-vbox" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2">
+    <padding>
+        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+    </padding>
 
-</AnchorPane>
+    <HBox>
+        <Label text="%TourOverview_Tours" />
+        <Button alignment="CENTER_RIGHT" text="+" />
+        <Button alignment="CENTER_RIGHT" text="-" />
+        <Button alignment="CENTER_RIGHT" text="[]" />
+    </HBox>
+    <Label text="- Tour 1" />
+    <Label text="- Tour 2" />
+    <Label text="- Tour 3" />
+    <Label text="... " />
+</VBox>
