implement layer architecture

--- a/PL/src/main/resources/org/easytours/tourplanner/view/tourdetails.fxml
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/tourdetails.fxml
@@ -7,7 +7,12 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.geometry.Insets?>
-<VBox spacing="4.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="2">
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+<VBox xmlns="http://javafx.com/javafx"
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="org.easytours.tourplanner.controller.TourDetailsController"
+      spacing="4.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="2">
     <!--<VBox  GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="2">-->
     <VBox styleClass="vbox-vbox">
         <padding>
@@ -18,7 +23,11 @@
             <ToggleButton text="%TourDetails_Route" />
             <ToggleButton text="%TourDetails_Description" />
         </FlowPane>
-        <TextArea/>
+        <ImageView>
+            <image>
+                <Image url="@img/mapquest.png"/>
+            </image>
+        </ImageView>
     </VBox>
     <!--<VBox GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3">-->
     <VBox styleClass="vbox-vbox">
