--- a/PL/src/main/resources/org/easytours/tourplanner/view/view.fxml
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/view.fxml
@@ -6,7 +6,7 @@
 
 <?import java.net.URL?>
 
-<!--<GridPane gridLinesVisible="true" hgap="4.0" vgap="4.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.2" fx:controller="org.easytours.tourplanner.controller.MainWindowController">-->
+<!--<GridPane gridLinesVisible="true" hgap="4.0" vgap="4.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.2" fx:controller="org.easytours.tourplanner.MainWindowController">-->
 <GridPane hgap="4.0" vgap="4.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.2" fx:controller="org.easytours.tourplanner.controller.MainWindowController">
     <stylesheets>
         <URL value="@css/view.css"/>
