--- a/PL/src/main/resources/org/easytours/tourplanner/view/touroverview.fxml
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/touroverview.fxml
@@ -7,7 +7,11 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.geometry.Insets?>
-<VBox styleClass="vbox-vbox" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2">
+
+<VBox xmlns="http://javafx.com/javafx"
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="org.easytours.tourplanner.controller.TourOverviewController"
+      styleClass="vbox-vbox" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2">
     <padding>
         <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
     </padding>
