--- a/PL/src/main/resources/org/easytours/tourplanner/view/touroverview.fxml
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/touroverview.fxml
@@ -8,7 +8,7 @@
 
 <?import javafx.geometry.Insets?>
 
-<VBox xmlns="http://javafx.com/javafx"
+<GridPane xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="org.easytours.tourplanner.controller.TourOverviewController"
       styleClass="vbox-vbox" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2">
@@ -16,16 +16,18 @@
         <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
     </padding>
 
-    <HBox>
+    <rowConstraints>
+        <RowConstraints />
+        <RowConstraints vgrow="ALWAYS"/>
+    </rowConstraints>
+
+    <HBox GridPane.columnIndex="0" GridPane.rowIndex="0">
         <Label text="%TourOverview_Tours" />
         <Button fx:id="addTourButton" alignment="CENTER_RIGHT" text="+" onAction="#onAddTourButtonClick" />
         <Button fx:id="deleteTourButton" alignment="CENTER_RIGHT" text="-" onAction="#onDeleteTourButtonClick" />
-        <Button alignment="CENTER_RIGHT" text="[]" />
+        <Button fx:id="editTourButton" alignment="CENTER_RIGHT" text="[]" onAction="#onEditTourButtonClick" />
     </HBox>
-    <ListView fx:id="toursList">
-        <Label text="- Tour 1" />
-        <Label text="- Tour 2" />
-        <Label text="- Tour 3" />
-        <Label text="... " />
+    <ListView fx:id="toursList" GridPane.columnIndex="0" GridPane.rowIndex="1">
+        <!-- tour items -->
     </ListView>
-</VBox>
+</GridPane>
