--- a/PL/src/main/resources/org/easytours/tourplanner/view/touroverview.fxml
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/touroverview.fxml
@@ -6,12 +6,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+
 <?import javafx.geometry.Insets?>
 
+<?import javafx.scene.image.ImageView?>
 <GridPane xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.easytours.tourplanner.controller.TourOverviewController"
-      styleClass="vbox-vbox" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2">
+          xmlns:fx="http://javafx.com/fxml"
+          fx:controller="org.easytours.tourplanner.controller.TourOverviewController"
+          styleClass="vbox-vbox" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2">
     <padding>
         <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
     </padding>
@@ -21,6 +23,11 @@
         <RowConstraints vgrow="ALWAYS"/>
     </rowConstraints>
 
+    <ImageView fx:id="tourImageView">
+        <!--            <image>-->
+        <!--                <Image url="@img/mapquest.png"/>-->
+        <!--            </image>-->
+    </ImageView>
     <HBox GridPane.columnIndex="0" GridPane.rowIndex="0">
         <Label text="%TourOverview_Tours" />
         <Button fx:id="addTourButton" alignment="CENTER_RIGHT" text="+" onAction="#onAddTourButtonClick" />
