start pdf report

--- a/PL/src/main/resources/org/easytours/tourplanner/view/view.fxml
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/view.fxml
@@ -13,6 +13,11 @@
         <Menu text="%Menu_File">
             <MenuItem text="%Menu_File_Import"/>
             <MenuItem text="%Menu_File_Export"/>
+            <SeparatorMenuItem/>
+            <Menu text="%Menu_File_Report">
+                <MenuItem text="%Menu_File_Report_Single" onAction="#onSingleReportClicked"/>
+                <MenuItem text="%Menu_File_Report_All" onAction="#onAllReportClicked"/>
+            </Menu>
         </Menu>
         <Menu text="%Menu_Edit">
 
