add report, import, export, text search

--- a/PL/src/main/resources/org/easytours/tourplanner/view/tourdetails.fxml
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/tourdetails.fxml
@@ -41,6 +41,12 @@
 
                     <Label text="%TourDetails_Description_TransportType"/>
                     <TextField fx:id="transportTypeTextField" editable="false"/>
+
+                   <Label text="%TourDetails_Description_Popularity"/>
+                   <TextField fx:id="popularityTextField" editable="false"/>
+
+                   <Label text="%TourDetails_Description_ChildFriendly"/>
+                   <TextField fx:id="childFriendlyTextField" editable="false"/>
                 </VBox>
             </Tab>
         </TabPane>
